--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.18",
     "@google/generative-ai": "^0.12.0",
+    "@headlessui/react": "^2.0.4",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
