--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nathanredblur.github.io",
+  "name": "nathanredblur.dev",
   "private": true,
   "version": "0.0.0",
   "type": "module",
