--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
-    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1"
   },
@@ -35,6 +34,8 @@
     "sass": "^1.77.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
+    "vike": "^0.4.181",
+    "vike-react": "^0.4.18",
     "vite": "^5.2.0"
   }
 }
